scripts/nullaway/wpi/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8.txt
../wpi/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/interpreter/InterpreterTest.java:80: error: [NullAway] unboxing of a @Nullable value
        return var.get(key);
                      ^
    (see http://t.uber.com/nullaway )
../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/state/LiftStates.java:19: error: [NullAway] @NonNull static field currentLiftState not initialized
	public static ILiftState currentLiftState;
	                         ^
    (see http://t.uber.com/nullaway )
Note: ../original/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/observe/ObserveTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors
